[package]
name = "substrate-runtime-development"
version = "0.0.1"
edition = "2021"
authors = ["Quang Le<legiaquangvn@yahoo.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/legiaquang/substrate-runtime-development"
readme = "README.md"
description = """
Substrate runtime development for blockchain on Polkadot
"""

[workspace]
members = [
    'node',
    'pallets/*',
    'runtime',
]
[profile.release]
panic = 'unwind'
